[package]
name = "quanta"
version = "0.9.0"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
edition = "2018"

license = "MIT"

description = "high-speed timing facility"

homepage = "https://github.com/nuclearfurnace/quanta"
repository = "https://github.com/nuclearfurnace/quanta"
documentation = "https://docs.rs/quanta"

readme = "README.md"

keywords = ["rdtsc", "timing", "nanosecond"]

[package.metadata.docs.rs]
all-features = true

[lib]
bench = false

[[bench]]
name = "timing"
harness = false

[features]
default = ["flaky_tests"]
flaky_tests = []
prost = ["prost-types"]

[dependencies]
once_cell = "1.4"
prost-types = { version = "0.7", optional = true }
atomic-shim = "0.1.0"

[target.'cfg(target_arch = "x86")'.dependencies]
raw-cpuid = "10.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "10.0"

[target.'cfg(target_arch = "mips")'.dependencies]
ctor = "0.1"

[target.'cfg(target_arch = "powerpc")'.dependencies]
ctor = "0.1"

[target.'cfg(all(not(target_os = "macos"), not(target_os = "ios"), not(target_os = "windows"), not(target_arch = "wasm32")))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.3"

[target.'cfg(target_os = "ios")'.dependencies]
mach = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["profileapi"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Performance"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "wasi"))'.dependencies]
wasi = "0.10"

[dev-dependencies]
average = "0.12"
criterion = "0.3"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3"
