[package]
name = "quanta"
version = "0.12.3"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
edition = "2021"
rust-version = "1.60"

license = "MIT"

description = "high-speed timing library"

homepage = "https://github.com/metrics-rs/quanta"
repository = "https://github.com/metrics-rs/quanta"
documentation = "https://docs.rs/quanta"

readme = "README.md"

keywords = ["rdtsc", "timing", "nanosecond"]

[package.metadata.docs.rs]
all-features = true

[lib]
bench = false

[[bench]]
name = "timing"
harness = false

[[bench]]
name = "contention"
harness = false

[features]
default = ["flaky_tests"]
flaky_tests = []
prost = ["prost-types"]

[dependencies]
once_cell = "1.4"
prost-types = { version = "0.11", default-features = false, optional = true }
crossbeam-utils = "0.8.5"

[target.'cfg(target_arch = "x86")'.dependencies]
raw-cpuid = "11.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11.0"

[target.'cfg(not(any(target_os = "windows", target_arch = "wasm32")))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["profileapi"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Performance"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "wasi"))'.dependencies]
wasi = "0.11"

[dev-dependencies]
average = "0.14"
criterion = "=0.3.3"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3"
